--- a/.github/workflows/xcode-scrapper.yml
+++ b/.github/workflows/xcode-scrapper.yml
@@ -9,14 +9,11 @@ jobs:
   scrap:
     # update to newer version when available
     # https://github.com/actions/runner-images#available-images
-    runs-on: macos-14
+    runs-on: macos-14-large
 
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
-
-      - name: Check Xcode installation
-        run: ls /Applications | grep Xcode
 
       - name: Use latest Xcode
         uses: maxim-lobanov/setup-xcode@v1
@@ -25,7 +22,7 @@ jobs:
 
       - name: Check Xcode version
         run: |
-          xcode-select -p
+          echo "Xcode path: $(xcode-select -p)"
           xcodebuild -version
           xcodebuild -showsdks
 
