--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -30,11 +30,11 @@ jobs:
       - name: Get current date
         id: date
         run: |
-          echo "MONTH_YEAR=$(date +'%b %Y')" >> $GITHUB_OUTPUT
+          echo "MONTH_YEAR=$(date +'%B %Y')" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
           title: "feat: add identifiers for ${{ steps.date.outputs.MONTH_YEAR }} models"
           commit-message: "feat: add identifiers for ${{ steps.date.outputs.MONTH_YEAR }} models"
-          branch: scrapping
+          branch: scrap/apple-websites
