--- a/.github/workflows/xcode-scrapper.yml
+++ b/.github/workflows/xcode-scrapper.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Get current date
         id: date
         run: |
-          echo "MONTH_YEAR=$(date +'%b %Y')" >> $GITHUB_OUTPUT
+          echo "MONTH_YEAR=$(date +'%B %Y')" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
           title: "feat: add identifiers for ${{ steps.date.outputs.MONTH_YEAR }} models"
           commit-message: "feat: add identifiers for ${{ steps.date.outputs.MONTH_YEAR }} models"
-          branch: scrapping-xcode
+          branch: scrap/xcode
