--- a/.github/workflows/xcode-scrapper.yml
+++ b/.github/workflows/xcode-scrapper.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Use latest Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest
+          xcode-version: "16.0"
 
       - name: Check Xcode version
         run: |
